--- a/turno-smart/turno-smart.csproj
+++ b/turno-smart/turno-smart.csproj
@@ -9,6 +9,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="ViewModels\NewFolder\**" />
+    <Compile Remove="Views\Profesional\**" />
+    <Content Remove="ViewModels\NewFolder\**" />
+    <Content Remove="Views\Profesional\**" />
+    <EmbeddedResource Remove="ViewModels\NewFolder\**" />
+    <EmbeddedResource Remove="Views\Profesional\**" />
+    <None Remove="ViewModels\NewFolder\**" />
+    <None Remove="Views\Profesional\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.6" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.10" />
